@@ -1,6 +1,8 @@
 2002-09-11  Mo DeJong  <supermo@bayarea.net>
 
 	* mkdist.sh: Update version to 5.1.1.
+	Rework toplevel directory test so it
+	checks for tcl and tk directories.
 
 2002-09-11  Mo DeJong  <supermo@bayarea.net>
 
